--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "validpsv@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
   }
