--- a/package.json
+++ b/package.json
@@ -16,7 +16,17 @@
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
+    "postcss-preset-env": "^9.3.0",
+    "sass": "^1.71.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
