--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Echoes of nature",
   "private": true,
   "scripts": {
-    "start": "npx webpack --mode development",
+    "start": "npx webpack serve --config webpack.config.dev.js",
     "build": "npx webpack --config webpack.config.prod.js",
     "build:dev": "npx webpack --config webpack.config.dev.js"
   },
@@ -29,6 +29,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.1",
     "webpack-merge": "^5.10.0"
   }
 }
