--- a/package.json
+++ b/package.json
@@ -15,14 +15,22 @@
   "author": "validpsv@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.3.0",
+    "prettier": "3.2.5",
     "sass": "^1.71.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
