--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.6.0",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
